abstract class Car {
  public setModel(model) {
    return;
  }
  public setMake(make) {
    return;
  }
  public setYear(param0) {
    return;
  }
  public getModel() {
    return;
  }
  public getMake() {
    return;
  }
  public getYear() {
    return;
  }
}


class Toyota extends Car {
  private name : String;
}


class Honda extends Car {
}


class Ford extends Car {
}



